tests/buffer/errors/from_bytes_wrong_type.dby
import std.buffer as buf

let data = [1, 2, 3]
let b = buf.from_bytes(data)
